--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -256,7 +256,7 @@
 
 @inproceedings{frank2014modeling,
   title={Modeling the dynamics of classroom education using teaching games},
-  author={Frank, Michael},
+  author={Frank, Michael C},
   booktitle={Proceedings of the Annual Meeting of the Cognitive Science Society},
   volume={36},
   number={36},
